# chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bishop.cpp  bishop.h  board.cpp  board.h  chess  chess.cpp  king.h  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  stats.h
src/: main.cpp
src/board/: board.cpp  board.h
src/game/: game.cpp  game.h  replay.cpp  replay.h
src/pieces/: CMakeLists.txt  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
